# LearnRabbitMQ

./: pyproject.toml
learnrabbitmq/: check.py  config.ini  consumer.py  models.py  produser.py
