[tool.poetry]
name = "learnrabbitmq"
version = "0.1.0"
description = ""
authors = ["kseniavoitko <kseniavoytko95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
mongoengine = "^0.27.0"
faker = "^19.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
